@@ -1,3 +1,9 @@
+2024-01-05  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* tramp.el (tramp-unknown-id-string, tramp-unknown-id-integer):
+	Make it a defvar.
+	(with-tramp-timeout): Adapt docstring.
+
 2023-12-30  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.7.0 released.
